Improve native warmup logging