@@ -1,6 +1,7 @@
 package com.zrlog.plugin.webhook;
 
 import com.zrlog.plugin.RunConstants;
+import com.zrlog.plugin.common.LoggerUtil;
 import com.zrlog.plugin.type.RunType;
 import com.zrlog.plugin.common.PluginNativeImageUtils;
 import com.zrlog.plugin.webhook.controller.WebhookController;
@@ -14,8 +15,12 @@ import java.io.File;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 public class GraalvmAgentApplication {
+
+    private static final Logger LOGGER = LoggerUtil.getLogger(GraalvmAgentApplication.class);
 
     public static void main(String[] args) throws IOException {
         RunConstants.runType = RunType.AGENT;
@@ -36,10 +41,10 @@ public class GraalvmAgentApplication {
 
     private static void exposePluginReflectivePaths() {
         try {
-            WebhookPluginAction.class.newInstance();
-            WebhookNotificationService.class.newInstance();
+            WebhookPluginAction.class.getDeclaredConstructor().newInstance();
+            WebhookNotificationService.class.getDeclaredConstructor().newInstance();
         } catch (ReflectiveOperationException e) {
-            e.printStackTrace();
+            LOGGER.log(Level.WARNING, "Expose webhook reflective paths failed", e);
         }
     }
 }
